# ontology-management-base

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_fc.txt
.github/: copilot-instructions.md  cspell.json  pull_request_template.md
General/: General_ontology.ttl  General_shacl.ttl  general_ontology.ttl  general_shacl.ttl
Geodata_CityGML/: Geodata_CityGML_ontology.ttl  Geodata_CityGML_shacl.ttl
Geodata_DGM/: Geodata_DGM_ontology.ttl  Geodata_DGM_shacl.ttl
Geodata_DOP/: Geodata_DOP_ontology.ttl  Geodata_DOP_shacl.ttl
HD-Map/: HD-Map_ontology.ttl  HD-Map_shacl.ttl  hdmap_ontology.ttl  hdmap_shacl.ttl
Scenario/: Scenario_ontology.ttl  Scenario_shacl.ttl  georeference_shacl.ttl  scenario_shacl.ttl
Sensor/: Sensor_ontology.ttl  Sensor_shacl.ttl
Simulation-Configuration/: Simulation-Configuration_ontology.ttl  Simulation-Configuration_shacl.ttl
Simulation-ValidationVerifikation/: Simulation_ValidationVerifikation_ontology.ttl  Simulation_ValidationVerifikation_shacl.ttl
Surface-model/: Surface-model_ontology.ttl  Surface-model_shacl.ttl  surfacemodel_ontology.ttl  surfacemodel_shacl.ttl
artifacts/: catalog-v001.xml
automotive-simulator/: PROPERTIES.md  VARIABLES.md  automotive-simulator_instance.json  automotive-simulator_ontology.ttl  automotive-simulator_shacl.ttl  automotive_simulator_ontology.ttl  automotive_simulator_shacl.ttl
base-references/: environment-model_manifest_reference.json  envited-x_manifest_reference.json  gx_dataexchangecomponent_reference.json  gx_legalperson_reference.json  hdmap_manifest_reference.json  ositrace_manifest_reference.json  scenario_manifest_reference.json  surface-model_manifest_reference.json
bundleData/: BundleData-instance.json  VARIABLES.md  bundleDataResource_final.ttl  bundleDataResource_ontology.ttl  bundleDataResource_shacl.ttl
config/: ontoenv.toml
dataResourceExtension/: VARIABLES.md  dataResourceExtension-instance.json  dataResourceExtension_instance.json  dataResourceExtension_ontology.ttl  dataResourceExtension_shacl.ttl
docs/: DOCUMENTATION_IMPLEMENTATION_PROGRESS.md  DOCUMENTATION_STRUCTURE_PROPOSAL.md  DOCUMENTATION_STRUCTURE_SUMMARY.md  PRECOMMIT_UPDATE_COMPLETE.md  SCRIPT_MIGRATION_COMPLETE.md  SUBMODULE_MIGRATION_COMPLETE.md  index.md  registry.json
environment/: environment_ontology.ttl
environment-model/: EnvironmentModel-instance.json  PROPERTIES.md  VARIABLES.md  environment-model-instance.json  environment-model_instance.json  environment-model_ontology.ttl  environment-model_shacl.ttl  manifest_reference.json
environment-model_testing_gh_action/: environment-model_shacl.ttl
envited-x/: PROPERTIES.md  README.md  VARIABLES.md  envited-x_inline_instance.json  envited-x_instance.json  envited-x_ontology.ttl  envited-x_shacl.ttl  manifest_reference.json
example/: PROPERTIES.md  VARIABLES.md  description_instance.json  description_ontology.ttl  description_shacl.ttl  example_instance.json  example_ontology.ttl  example_shacl.ttl
examples/: VARIABLES.md  description_ontology.ttl  description_shacl.ttl  example_ontology.ttl  example_shacl.ttl
general/: PROPERTIES.md  VARIABLES.md  general-instance.json  general_instance.json  general_ontology.ttl  general_shacl.ttl  manifest_reference.json
georeference/: PROPERTIES.md  VARIABLES.md  georeference-instance.json  georeference_instance.json  georeference_ontology.ttl  georeference_shacl.ttl
gx/: PROPERTIES.md  README.md  VARIABLES.md  gx_context.jsonld  gx_data_resource_instance.json  gx_instance.json  gx_legal_person_instance.json  gx_ontology.ttl  gx_shacl.ttl  registry_placeholder_instance.json
hdmap/: PROPERTIES.md  README.md  VARIABLES.md  hdmap-instance.json  hdmap_instance.json  hdmap_ontology.ttl  hdmap_shacl.ttl  manifest_reference.json  readme.md
hooks/: copy_artifacts.py
imports/: README.md  catalog-v001.xml
leakage-test/: PROPERTIES.md  VARIABLES.md  leakage-test_instance.json  leakage-test_ontology.ttl  leakage-test_shacl.ttl
manifest/: PROPERTIES.md  README.md  VARIABLES.md  manifest_instance.json  manifest_ontology.ttl  manifest_shacl.ttl
manipulated-sensor-simulation/: VARIABLES.md  manipulated-sensor-simulation_ontology.ttl  manipulated-sensor-simulation_shacl.ttl
marketplace-info/: VARIABLES.md  marketplace-info_instance.json  marketplace-info_ontology.ttl  marketplace-info_shacl.ttl
marketplaceResource/: MarketplaceResource-instance.json  VARIABLES.md  marketplaceResource_ontology.ttl  marketplaceResource_shacl.ttl
openlabel/: PROPERTIES.md  README.md  openlabel_instance.json  openlabel_ontology.ttl  openlabel_ontology_scenario_tags.ttl  openlabel_ref_ontology_extended.ttl  openlabel_shacl.ttl  readme.md
ositrace/: PROPERTIES.md  VARIABLES.md  manifest_reference.json  ositrace_instance.json  ositrace_ontology.ttl  ositrace_shacl.ttl
scenario/: PROPERTIES.md  README.md  Scenario_instance.json  VARIABLES.md  manifest_reference.json  readme.md  scenario_instance.json  scenario_ontology.ttl  scenario_shacl.ttl
sensor-failure-simulation/: sensor-failure-simulation_ontology.ttl  sensor-failure-simulation_shacl.ttl
sensordata/: SensorDataMetadata_v2.drawio  sensordata_ontology.ttl  sensordata_shacl_nested.ttl
service/: PROPERTIES.md  VARIABLES.md  service_instance.json  service_ontology.ttl  service_shacl.ttl
services/: service_ontology.ttl  service_shacl.ttl
simulated-sensor/: PROPERTIES.md  VARIABLES.md  simulated-sensor_instance.json  simulated-sensor_ontology.ttl  simulated-sensor_shacl.ttl  simulated_sensor_failure_model_shape.ttl  simulated_sensor_ontology.ttl  simulated_sensor_shacl.ttl  simulated_sensor_shape.ttl
simulation-model/: PROPERTIES.md  VARIABLES.md  (+3 more)
(+411 files in other folders)
